# USHealthIO-V2

./: README.md  package.json
.github/workflows/: build.yaml
apps/admin/: middleware.ts  package.json
apps/admin/app/: layout.tsx  page.tsx
apps/admin/app/_components/: smartBreadCrumb.tsx
apps/admin/app/_components/_lib/: BreadCrumbName.ts
apps/admin/app/callback/: route.ts
apps/admin/app/insurance/companies/: page.tsx
apps/admin/app/insurance/companies/[insuranceCompanyId]/: layout.tsx  page.tsx
apps/admin/app/insurance/companies/[insuranceCompanyId]/_components/: generalForm.tsx  insuranceCompanySidebar.tsx
apps/admin/app/insurance/companies/_components/: insuranceCompanyTable.tsx
apps/admin/app/insurance/companies/new/: page.tsx
apps/admin/components/: app-sidebar.tsx  dataTable.tsx  nav-user.tsx  subSidebar.tsx
apps/admin/components/ui/: sidebar.tsx
apps/admin/lib/: kafka.ts
apps/hdas/: Dockerfile  README.md  nodemon.json  package.json
apps/hdas/kube/: deployment.yml
apps/hdas/src/: filePrep.ts  index.ts
apps/hdas/src/tasks/: ImportCigna.ts  taskRoot.ts
cql-schema/: schema.sql
parser-tools/parser-rs/: Cargo.toml  build.rs
parser-tools/parser-rs/src/: kafka.rs  main.rs
parser-tools/parser-rs/src/in_network/: file_root.rs  kafka_messages.rs  mod.rs
parser-tools/parser-rs/src/in_network/types/: bundled_code.rs  in_network.rs  mod.rs  negotiated_price_object.rs  negotiated_rates.rs  provider_references.rs  providers_object.rs  tax_identifier.rs
parser-tools/parser-rs/src/protos/: kafka.proto
(+10 files in other folders)
