[package]
name = "parser-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10.1"
serde_json = "1.0.145"
sonic-rs = "0.4.0"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
struson = { version = "0.6.0", features = ["simple-api"]}
log = "0.4.28"
rdkafka = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
protobuf = "2.28.0"

[[bin]]
name = "main"
path = "src/main.rs"
[build-dependencies]
protobuf-codegen-pure = "2.28.0"
